force-app/main/default/objects/Solution/Solution.object-meta.xml
<CustomObject>
</CustomObject>