force-app/main/default/objects/Solution/fields/Lengths_Affected__c.field-meta.xml
<CustomField>
    <fullName>Lengths_Affected__c</fullName>
    <label>Lengths Affected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Length</valueSetName>
    </valueSet>
</CustomField>