force-app/main/default/objects/Solution/fields/Model_Years_Affected__c.field-meta.xml
<CustomField>
    <fullName>Model_Years_Affected__c</fullName>
    <description>YYYY-YYYY</description>
    <label>Model Years Affected</label>
    <length>9</length>
    <type>Text</type>
</CustomField>