force-app/main/default/objects/Solution/fields/Modes_Affected__c.field-meta.xml
<CustomField>
    <fullName>Modes_Affected__c</fullName>
    <label>Modes Affected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode</valueSetName>
    </valueSet>
</CustomField>