force-app/main/default/objects/Solution/fields/Styles_Affected__c.field-meta.xml
<CustomField>
    <fullName>Styles_Affected__c</fullName>
    <label>Styles Affected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Style</valueSetName>
    </valueSet>
</CustomField>